--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "local": "./node_modules/.bin/nodemon -L --ignore public/",
-    "db:reset": "node bin/resetdb.js"
+    "db:reset": "node bin/resetdb.js",
+    "dev": "tailwindcss -i ./src/input.css -o ./public/styles/styles.css --watch"
   },
   "author": "Lighthouse Labs",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "sass": "^1.35.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.10"
+    "nodemon": "^2.0.10",
+    "tailwindcss": "^3.3.3"
   }
 }
