--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "chalk": "^2.4.2",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -19,7 +20,6 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
-    "openai": "^4.10.0",
     "pg": "^8.5.0",
     "sass": "^1.35.1"
   },
