--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ DB_NAME=midterm
 # Uncomment and set to true for Heroku
 # DB_SSL=true if heroku
 DB_PORT=5432
+OPENAI_API_KEY=(Your openAi API key here)
